[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/main/world/overworld-ui.gd" type="Script" id=1]
[ext_resource path="res://src/main/world/overworld-buttons.gd" type="Script" id=2]
[ext_resource path="res://src/main/ui/ImageButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/main/ui/ButtonShortcutHelper.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/ui/theme/h4.theme" type="Theme" id=5]
[ext_resource path="res://assets/main/ui/touch/menu.png" type="Texture" id=7]
[ext_resource path="res://assets/main/ui/touch/menu-pressed.png" type="Texture" id=8]
[ext_resource path="res://src/demo/world/FreeRoamTouchButtons.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/main/ui/settings/SettingsMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/main/ui/VersionLabel.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/main/ui/MoneyLabel.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/main/chat/ui/ChatUi.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/main/ui/MusicPopup.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/main/ui/FpsLabel.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/main/ui/CheatCodeDetector.tscn" type="PackedScene" id=20]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="InputEventAction" id=15]
action = "ui_cancel"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 15 )

[node name="FreeRoamUi" type="CanvasLayer" groups=["overworld_ui"]]
script = ExtResource( 1 )

[node name="Labels" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SoutheastLabels" type="VBoxContainer" parent="Labels"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -502.0
margin_top = -290.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2
theme = ExtResource( 5 )
alignment = 2

[node name="FpsLabel" parent="Labels/SoutheastLabels" instance=ExtResource( 19 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 236.0
margin_right = 492.0
margin_bottom = 256.0

[node name="VersionLabel" parent="Labels/SoutheastLabels" instance=ExtResource( 14 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 260.0
margin_right = 492.0
margin_bottom = 280.0

[node name="NorthwestLabels" type="VBoxContainer" parent="Labels"]
margin_left = 10.0
margin_top = 10.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
theme = ExtResource( 5 )

[node name="MoneyLabel" parent="Labels/NorthwestLabels" instance=ExtResource( 15 )]
margin_right = 502.0
compact = true

[node name="ChatUi" parent="." instance=ExtResource( 16 )]
visible = false

[node name="TouchButtons" parent="." instance=ExtResource( 11 )]

[node name="Buttons" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.627451 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="Northeast" type="HBoxContainer" parent="Buttons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -512.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
custom_constants/separation = 10
alignment = 2

[node name="SettingsButton" parent="Buttons/Northeast" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 402.0
margin_right = 502.0
margin_bottom = 100.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
shortcut = SubResource( 9 )
icon = ExtResource( 7 )
expand_icon = true
normal_icon = ExtResource( 7 )
pressed_icon = ExtResource( 8 )

[node name="ShortcutHelper" parent="Buttons/Northeast/SettingsButton" instance=ExtResource( 4 )]
action = "ui_menu"

[node name="CheatCodeDetector" parent="." instance=ExtResource( 20 )]
codes = [ "bigfps" ]

[node name="SettingsMenu" parent="." instance=ExtResource( 12 )]
quit_type = 1

[node name="MusicPopup" parent="." instance=ExtResource( 17 )]

[connection signal="chat_event_played" from="ChatUi" to="." method="_on_ChatUi_chat_event_played"]
[connection signal="chat_finished" from="ChatUi" to="." method="_on_ChatUi_chat_finished"]
[connection signal="showed_choices" from="ChatUi" to="." method="_on_ChatUi_showed_choices"]
[connection signal="pressed" from="Buttons/Northeast/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="cheat_detected" from="CheatCodeDetector" to="Labels/SoutheastLabels/FpsLabel" method="_on_CheatCodeDetector_cheat_detected"]
[connection signal="hide" from="SettingsMenu" to="TouchButtons" method="_on_Menu_hide"]
[connection signal="hide" from="SettingsMenu" to="Buttons" method="_on_Menu_hide"]
[connection signal="quit_pressed" from="SettingsMenu" to="." method="_on_SettingsMenu_quit_pressed"]
[connection signal="show" from="SettingsMenu" to="TouchButtons" method="_on_Menu_show"]
[connection signal="show" from="SettingsMenu" to="Buttons" method="_on_Menu_show"]
